--- a/architecture.html
+++ b/architecture.html
@@ -424,7 +424,7 @@
 
             <!-- Atlas Core Log -->
             <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
+                <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
                     <div class="card-body p-4">
                         <blockquote class="blockquote mb-4">
                             <p>"Load distribution optimized across 16 tiers. Core column approved for seismic tier-7 region."</p>
@@ -438,7 +438,7 @@
             <!-- Echo Habitat Log -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <blockquote class="blockquote mb-4">
                             <p>"Rainwater loop achieved 98.4% reuse. Passive cooling verified through AI heat drift simulation."</p>
                             <footer class="blockquote-footer">A2: Echo Habitat <cite>[11:47 UTC]</cite></footer>
@@ -451,7 +451,7 @@
             <!-- Skytrace Nexus Log -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4">
-                    <div class="card-body p-4">
+                    <div class="feature-box card-body p-4">
                         <blockquote class="blockquote mb-4">
                             <p>"Auto-lift shaft depth recalibrated. Wind tunnel phase passed with <strong>94% efficiency</strong>."</p>
                             <footer class="blockquote-footer">A3: Skytrace Nexus <cite>[13:15 UTC]</cite></footer>
@@ -470,24 +470,24 @@
             <h2 class="text-center mb-5 section-title glow-teal">🧠 Architect AI Integration</h2>
             <div class="row g-4 text-center justify-content-center">
 
-            <div class="col-md-3">
-                <div class="p-4 border roundedshadow-sm">
-                <h5 class="fw-bold">Atlas Core</h5>
-                <p>Feeds load analytics to all structural systems before simulation.</p>
+                <div class="col-md-3">
+                    <div class="feature-box p-4 border roundedshadow-sm">
+                        <h5 class="fw-bold">Atlas Core</h5>
+                        <p>Feeds load analytics to all structural systems before simulation.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="p-4 border rounded shadow-sm">
-                <h5 class="fw-bold">Echo Habitat</h5>
-                <p>Reports sustainable loops into TerraGrid’s green cycle AI.</p>
+                <div class="col-md-3">
+                    <div class="feature-box p-4 border rounded shadow-sm">
+                        <h5 class="fw-bold">Echo Habitat</h5>
+                        <p>Reports sustainable loops into TerraGrid’s green cycle AI.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="p-4 border rounded shadow-sm">
-                <h5 class="fw-bold">Skytrace Nexus</h5>
-                <p>Optimizes lift traffic data and wind drift inputs for vertical AI control.</p>
+                <div class="col-md-3">
+                    <div class="feature-box p-4 border rounded shadow-sm">
+                        <h5 class="fw-bold">Skytrace Nexus</h5>
+                        <p>Optimizes lift traffic data and wind drift inputs for vertical AI control.</p>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
