--- a/armor.html
+++ b/armor.html
@@ -370,7 +370,6 @@
                         <p>Join forces with a team that values excellence, creativity, and long-term impact.</p>
                     </div>
                 </div>
-                
             </div>
         </div>
     </section>
@@ -381,32 +380,32 @@
             <h2 class="text-center mb-5 section-title glow-deepred">🛡️ Tactical Body Armor Line</h2>
             <div class="row text-center g-4 justify-content-center">
 
-            <!-- MK-I Cuirass Core -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-shield-alt fa-2x mb-3 text-light glow-icon"></i>
-                <h5 class="fw-bold">MK-I Cuirass Core</h5>
-                <p>Polyfiber vest with ceramic blend plates. Light, modular, combat-ready for recon or riot response.</p>
+                <!-- MK-I Cuirass Core -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-shield-alt fa-2x mb-3 text-light glow-icon"></i>
+                        <h5 class="fw-bold">MK-I Cuirass Core</h5>
+                        <p>Polyfiber vest with ceramic blend plates. Light, modular, combat-ready for recon or riot response.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- MK-II Obsidian Frame -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-user-shield fa-2x mb-3 text-purple glow-icon"></i>
-                <h5 class="fw-bold">MK-II Obsidian Frame</h5>
-                <p>Reinforced spine chassis with kinetic gel layering. Designed for blunt force and blast absorption.</p>
+                <!-- MK-II Obsidian Frame -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-user-shield fa-2x mb-3 text-purple glow-icon"></i>
+                        <h5 class="fw-bold">MK-II Obsidian Frame</h5>
+                        <p>Reinforced spine chassis with kinetic gel layering. Designed for blunt force and blast absorption.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- MK-III Apex Sentinel -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-hard-hat fa-2x mb-3 text-warning glow-icon"></i>
-                <h5 class="fw-bold">MK-III Apex Sentinel</h5>
-                <p>Urban tactical set with integrated HUD visor, reactive plating, and EMP-resistant mesh layer.</p>
+                <!-- MK-III Apex Sentinel -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-hard-hat fa-2x mb-3 text-warning glow-icon"></i>
+                        <h5 class="fw-bold">MK-III Apex Sentinel</h5>
+                        <p>Urban tactical set with integrated HUD visor, reactive plating, and EMP-resistant mesh layer.</p>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
@@ -418,44 +417,44 @@
             <h2 class="text-center mb-5 section-title glow-deepred">📓 Armor Log Reports</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-            <!-- MK-I Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Impact sustained: 3.2kN. Ceramic deflection successful. User mobility unaffected."</p>
-                    <footer class="blockquote-footer">MK-I Core Unit <cite>[02:17 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-info">🧪 Status: Field Ready</div>
+                <!-- MK-I Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Impact sustained: 3.2kN. Ceramic deflection successful. User mobility unaffected."</p>
+                            <footer class="blockquote-footer">MK-I Core Unit <cite>[02:17 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-info">🧪 Status: Field Ready</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- MK-II Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Blast radius 2m. Gel nodes flexed to 84%. Spine and vital zones remain uncompromised."</p>
-                    <footer class="blockquote-footer">MK-II Obsidian <cite>[04:52 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-warning">💥 Status: Stress-Test Complete</div>
+                <!-- MK-II Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Blast radius 2m. Gel nodes flexed to 84%. Spine and vital zones remain uncompromised."</p>
+                            <footer class="blockquote-footer">MK-II Obsidian <cite>[04:52 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-warning">💥 Status: Stress-Test Complete</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- MK-III Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Visor thermal mode engaged. EMP pulse deflected. HUD relink achieved in 1.4s."</p>
-                    <footer class="blockquote-footer">MK-III Sentinel <cite>[03:10 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-success">🧿 Status: Tactical Suite Online</div>
+                <!-- MK-III Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Visor thermal mode engaged. EMP pulse deflected. HUD relink achieved in 1.4s."</p>
+                            <footer class="blockquote-footer">MK-III Sentinel <cite>[03:10 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-success">🧿 Status: Tactical Suite Online</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
             </div>
         </div>
@@ -467,7 +466,7 @@
             <h2 class="text-center mb-5 section-title glow-deepred">🧬 Combat Operator Feedback</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="border rounded p-4 shadow">
+                    <div class="feature-box border rounded p-4 shadow">
                         <p class="glow-violet"><strong>Ops Command Log:</strong></p>
                         <pre class="bg-secondary p-3 rounded text-start glow-teal">
             [04:03:22] MK-I Cuirass: Ceramic plate registered 97% deflection.
@@ -486,7 +485,7 @@
             <h2 class="text-center mb-5 section-title glow-deepred">📊 Comparative Armor Grid</h2>
             <div class="table-responsive">
             <table class="table table-dark table-striped text-center align-middle">
-                <thead>
+                <thead class="feature-box">
                 <tr>
                     <th>Model</th>
                     <th>Core Material</th>
@@ -495,7 +494,7 @@
                     <th>Weight Class</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="feature-box">
                 <tr>
                     <td>MK-I Cuirass</td>
                     <td>Ceramic + Polyfiber</td>
