--- a/drones.html
+++ b/drones.html
@@ -536,7 +536,7 @@
 
                 <!-- SL-01 Falcon Log -->
                 <div class="col">
-                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Falcon sweep concluded. Two anomalies flagged. Uploading thermal overlay to central core."</p>
@@ -549,7 +549,7 @@
 
                 <!-- SL-02 Hunter Log -->
                 <div class="col">
-                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Target locked. Velocity sync engaged. Intercept in 4... 3... 2... —contact."</p>
@@ -562,7 +562,7 @@
 
                 <!-- SL-03 Vulture Log -->
                 <div class="col">
-                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"EMP charge deployed. All hostile electronics offline. Switching to RTB protocol."</p>
@@ -575,7 +575,7 @@
 
                 <!-- SL-04 Viper Log -->
                 <div class="col">
-                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Sweep velocity at 98%. Flare deployed at Zone Theta. Returning to orbit."</p>
@@ -588,7 +588,7 @@
 
                 <!-- SL-05 Raven Log -->
                 <div class="col">
-                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Interior scan complete. Beacon signal deployed. Awaiting next objective."</p>
@@ -601,7 +601,7 @@
 
                 <!-- SL-07 Phantom Vortex Log -->
                 <div class="col">
-                    <div class="feature-box card h-100 shadow-lg border-0 rounded-4">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
                         <div class="feature-box card-body p-4">
                             <blockquote class="blockquote mb-4">
                             <p>"Velocity breach confirmed. Gyro hold locked. AI telemetry packet sent to core lab."</p>
