--- a/index.html
+++ b/index.html
@@ -357,70 +357,69 @@
                         <p>Join forces with a team that values excellence, creativity, and long-term impact.</p>
                     </div>
                 </div>
-                
             </div>
         </div>
     </section>
 
     <!-- Why Slabbion -->
-    <section id="services" class="py-5 text-white">
+    <section id="services" class="py-5 text-white bg-black">
         <div class="container">
             <h2 class="mb-5 text-center section-title glow-blue">💡 Why Choose Slabbion?</h2>
             <div class="row text-center g-4 justify-content-center">
 
-            <!-- Innovation -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-brain fa-2x mb-3 text-secondary glow-icon"></i>
-                <h5 class="fw-bold">Innovation-Driven</h5>
-                <p>Creative solutions, not cookie-cutter builds.</p>
+                <!-- Innovation -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-brain fa-2x mb-3 text-secondary glow-icon"></i>
+                        <h5 class="fw-bold">Innovation-Driven</h5>
+                        <p>Creative solutions, not cookie-cutter builds.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Security -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-user-shield fa-2x mb-3 text-light glow-icon"></i>
-                <h5 class="fw-bold">Security Obsessed</h5>
-                <p>Encryption, audits, and secure-by-default systems.</p>
+                <!-- Security -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-user-shield fa-2x mb-3 text-light glow-icon"></i>
+                        <h5 class="fw-bold">Security Obsessed</h5>
+                        <p>Encryption, audits, and secure-by-default systems.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Client Focus -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-thumbs-up fa-2x mb-3 text-success glow-icon"></i>
-                <h5 class="fw-bold">Client-First</h5>
-                <p>You lead, we enhance. Collaboration is core.</p>
+                <!-- Client Focus -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-thumbs-up fa-2x mb-3 text-success glow-icon"></i>
+                        <h5 class="fw-bold">Client-First</h5>
+                        <p>You lead, we enhance. Collaboration is core.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Speed -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-stopwatch fa-2x mb-3 text-warning glow-icon"></i>
-                <h5 class="fw-bold">Lightning Fast</h5>
-                <p>Speed in delivery, speed in product. Period.</p>
+                <!-- Speed -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-stopwatch fa-2x mb-3 text-warning glow-icon"></i>
+                        <h5 class="fw-bold">Lightning Fast</h5>
+                        <p>Speed in delivery, speed in product. Period.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Full Stack -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-layer-group fa-2x mb-3 text-info glow-icon"></i>
-                <h5 class="fw-bold">Full-Stack Experts</h5>
-                <p>From design to DevOps — no outsourcing here.</p>
+                <!-- Full Stack -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-layer-group fa-2x mb-3 text-info glow-icon"></i>
+                        <h5 class="fw-bold">Full-Stack Experts</h5>
+                        <p>From design to DevOps — no outsourcing here.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Results -->
-            <div class="col-md-6 col-lg-4 col-xl-2">
-                <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
-                <i class="fas fa-chart-line fa-2x mb-3 text-danger glow-icon"></i>
-                <h5 class="fw-bold">Results You Can Measure</h5>
-                <p>Analytics, KPIs, and ROI baked in from day one.</p>
+                <!-- Results -->
+                <div class="col-md-6 col-lg-4 col-xl-2">
+                    <div class="feature-box h-100 p-4 border rounded shadow-sm bg-gradient bg-opacity-10">
+                        <i class="fas fa-chart-line fa-2x mb-3 text-danger glow-icon"></i>
+                        <h5 class="fw-bold">Results You Can Measure</h5>
+                        <p>Analytics, KPIs, and ROI baked in from day one.</p>
+                    </div>
                 </div>
-            </div>
 
             </div>
         </div>
@@ -432,79 +431,78 @@
             <h2 class="text-center mb-5 section-title glow-blue">📣 What Our Clients Say</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-            <!-- Testimonial Card -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"The website Slabbion built for us is sleek and professional. It reflects our work ethic and quality perfectly."</p>
-                    <footer class="blockquote-footer">Primo Installations, <cite><a href="https://www.primoinstallations.com" target="_blank">www.primoinstallations.com</a></cite></footer>
-                    </blockquote>
-                    <div class="stars text-warning">★★★★★</div>
+                <!-- Testimonial Card -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"The website Slabbion built for us is sleek and professional. It reflects our work ethic and quality perfectly."</p>
+                            <footer class="blockquote-footer">Primo Installations, <cite><a href="https://www.primoinstallations.com" target="_blank">www.primoinstallations.com</a></cite></footer>
+                            </blockquote>
+                            <div class="stars text-warning">★★★★★</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Slabbion helped us rebrand from the ground up — the website, visuals, and messaging are spot on!"</p>
-                    <footer class="blockquote-footer">Umbretta Mills, <cite><a href="https://www.umbrettamills.com" target="_blank">www.umbrettamills.com</a></cite></footer>
-                    </blockquote>
-                    <div class="stars text-warning">★★★★★</div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Slabbion helped us rebrand from the ground up — the website, visuals, and messaging are spot on!"</p>
+                            <footer class="blockquote-footer">Umbretta Mills, <cite><a href="https://www.umbrettamills.com" target="_blank">www.umbrettamills.com</a></cite></footer>
+                            </blockquote>
+                            <div class="stars text-warning">★★★★★</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Slabbion turned my vision into a professional and modern website. Their attention to branding was incredible."</p>
-                    <footer class="blockquote-footer">Antone, <cite>Entrepreneur</cite></footer>
-                    </blockquote>
-                    <div class="stars text-warning">★★★★★</div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Slabbion turned my vision into a professional and modern website. Their attention to branding was incredible."</p>
+                            <footer class="blockquote-footer">Antone, <cite>Entrepreneur</cite></footer>
+                            </blockquote>
+                            <div class="stars text-warning">★★★★★</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Loved working with Slabbion — seamless design, perfect communication, and real results."</p>
-                    <footer class="blockquote-footer">Moray, <cite>Business Owner</cite></footer>
-                    </blockquote>
-                    <div class="stars text-warning">★★★★★</div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Loved working with Slabbion — seamless design, perfect communication, and real results."</p>
+                            <footer class="blockquote-footer">Moray, <cite>Business Owner</cite></footer>
+                            </blockquote>
+                            <div class="stars text-warning">★★★★★</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Our new website by Slabbion is clean, fast, and professional. Couldn't be happier with the service."</p>
-                    <footer class="blockquote-footer">Dawid, <cite>Freelancer</cite></footer>
-                    </blockquote>
-                    <div class="stars text-warning">★★★★★</div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Our new website by Slabbion is clean, fast, and professional. Couldn't be happier with the service."</p>
+                            <footer class="blockquote-footer">Dawid, <cite>Freelancer</cite></footer>
+                            </blockquote>
+                            <div class="stars text-warning">★★★★★</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Working with Slabbion was one of the best decisions we made. Their designs communicate quality and trust."</p>
-                    <footer class="blockquote-footer">Michelle Adams, <cite>Marketing Lead</cite></footer>
-                    </blockquote>
-                    <div class="stars text-warning">★★★★★</div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Working with Slabbion was one of the best decisions we made. Their designs communicate quality and trust."</p>
+                            <footer class="blockquote-footer">Michelle Adams, <cite>Marketing Lead</cite></footer>
+                            </blockquote>
+                            <div class="stars text-warning">★★★★★</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
-
             </div>
         </div>
     </section>
