--- a/vehicles.html
+++ b/vehicles.html
@@ -402,7 +402,6 @@
                         <p>Join forces with a team that values excellence, creativity, and long-term impact.</p>
                     </div>
                 </div>
-                
             </div>
         </div>
     </section>
@@ -413,45 +412,44 @@
             <h2 class="text-center mb-5 section-title glow-orange">🛠️ Custom Build Logs</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-            <!-- Dune Buggy Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Chassis mounted. Reinforced roll cage bolted. Dual-shock suspension tuned for max articulation."</p>
-                    <footer class="blockquote-footer">XR-9 Dune Buggy <cite>[09:12 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-warning">🧩 Status: Frame Assembly Complete</div>
+                <!-- Dune Buggy Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Chassis mounted. Reinforced roll cage bolted. Dual-shock suspension tuned for max articulation."</p>
+                            <footer class="blockquote-footer">XR-9 Dune Buggy <cite>[09:12 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-warning">🧩 Status: Frame Assembly Complete</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- Motorbike Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Chain-to-axle tension aligned. Gyro stabilizers synced. E-grip sensors embedded into handlebars."</p>
-                    <footer class="blockquote-footer">GravBike M7 <cite>[08:45 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-warning">🏍️ Status: Rider Sync Calibrated</div>
+                <!-- Motorbike Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Chain-to-axle tension aligned. Gyro stabilizers synced. E-grip sensors embedded into handlebars."</p>
+                            <footer class="blockquote-footer">GravBike M7 <cite>[08:45 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-warning">🏍️ Status: Rider Sync Calibrated</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
 
-            <!-- Zombie Vehicle Log -->
-            <div class="col">
-                <div class="card h-100 shadow-lg border-0 rounded-4">
-                <div class="card-body p-4">
-                    <blockquote class="blockquote mb-4">
-                    <p>"Barbed paneling welded. Spare fuel rigs installed. Blackout mode triggers verified."</p>
-                    <footer class="blockquote-footer">ZB-01 "Reckoner" <cite>[10:21 UTC]</cite></footer>
-                    </blockquote>
-                    <div class="text-warning">🧟 Status: Urban Survival Mode Armed</div>
+                <!-- Zombie Vehicle Log -->
+                <div class="col">
+                    <div class="card h-100 shadow-lg border-0 rounded-4">
+                        <div class="feature-box card-body p-4">
+                            <blockquote class="blockquote mb-4">
+                            <p>"Barbed paneling welded. Spare fuel rigs installed. Blackout mode triggers verified."</p>
+                            <footer class="blockquote-footer">ZB-01 "Reckoner" <cite>[10:21 UTC]</cite></footer>
+                            </blockquote>
+                            <div class="text-warning">🧟 Status: Urban Survival Mode Armed</div>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
-
             </div>
         </div>
     </section>
@@ -462,7 +460,7 @@
             <h2 class="text-center mb-5 section-title glow-orange">📊 Build Specifications</h2>
             <div class="table-responsive">
             <table class="table table-dark table-striped text-center align-middle">
-                <thead>
+                <thead class="feature-box">
                 <tr>
                     <th>Model</th>
                     <th>Type</th>
@@ -471,7 +469,7 @@
                     <th>Drive System</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="feature-box">
                 <tr>
                     <td>XR-9 Dune Buggy</td>
                     <td>Off-Road</td>
@@ -512,7 +510,7 @@
             <h2 class="text-center mb-5 section-title glow-orange">🔧 Workshop Live Feed</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="border rounded p-4 shadow">
+                    <div class="feature-box border rounded p-4 shadow">
                         <p class="glow-violet"><strong>Ops Command Log:</strong></p>
                         <pre class="bg-secondary p-3 rounded text-start glow-teal">
             [10:00:22] XR-9 Buggy frame balance test complete.
