--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -397,7 +397,7 @@
     </section>
 
     <!-- Why Choose Us Section -->
-    <section class="py-5">
+    <section class="py-5 bg-dark">
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="section-title glow-blue">Why Choose Us?</h2>
