--- a/customsolutions.html
+++ b/customsolutions.html
@@ -119,29 +119,41 @@
     <!-- Custom Solutions Hero -->
     <section id="hero" class="text-center py-5">
         <div class="container">
+            <!-- Logo -->
             <img src="images/CustomSolutions_Logo_2500x500px.png" alt="Slabbion Logo" class="logo mb-4 glow-icon" />
 
+            <!-- Main Title -->
             <h1 class="display-4 glow-yellow">
-            Custom Digital Powerhouse
+                Slabbion
             </h1>
 
-            <p class="lead font-weight-bold">
-            Websites. Socials. Graphics. Slabbion brings your brand into the spotlight with sleek, smart, and strategic solutions.
+            <!-- Second Title -->
+            <h1 class="display-4 glow-yellow">
+                MegaXGnome AI Agents
+            </h1>
+
+            <!-- Subheading -->
+            <p class="lead font-weight-bold text-white">
+                Custom Solutions. Tactical Intelligence. Beautiful Execution.
             </p>
 
-            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s" style="color: #f1c40f;">
-            🚀 Tired of weak digital presence? Let's fix that — together.
+            <!-- Description -->
+            <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s text-warning">
+                ⚙️ Need strategy, style, or systems? MegaXGnome delivers — modular, precise, and powerful.
             </p>
 
+            <!-- Call to Action -->
             <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-yellow">
-            Unlock Custom Solutions
+                Unlock Custom Solutions
             </a>
 
-            <div class="stars mt-4">
-            ★★★★★
+            <!-- Stars / Rating -->
+            <div class="stars mt-4 text-warning">
+                ★★★★★
             </div>
         </div>
     </section>
+
 
     <!-- Slabbion AI Agents Showcase -->
     <section id="ai-agents" class="container py-5">
